--- a/maceApi/package.json
+++ b/maceApi/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-fileupload": "^1.3.1",
     "mongodb": "^4.5.0",
     "morgan": "^1.10.0"
   }
