--- a/maceApi/package.json
+++ b/maceApi/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
     "mongodb": "^4.5.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.3.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4"
   }
 }
